Update main.py for Railway compatibility, enhance requirements.txt with additional dependencies, and add blank lines for code clarity in various files.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
+# Railway-compatible requirements for Emergency Agent System
+# Using specific versions to avoid build issues
+
+# Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
+pydantic-core==2.14.1
+
+# Google AI dependencies
 google-generativeai>=0.8.0
+
+# Web framework dependencies
 python-multipart==0.0.6
 jinja2==3.1.2
+
+# Authentication dependencies (optional for Railway)
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+
+# Environment and utilities
 python-dotenv==1.0.0
 httpx==0.25.2
 geopy==2.4.1
+
+# Additional dependencies for Railway deployment
+gunicorn==21.2.0
 
