--- a/railway.toml
+++ b/railway.toml
@@ -2,12 +2,13 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT"
+startCommand = "python start_railway.py"
 healthcheckPath = "/status"
-healthcheckTimeout = 300
+healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 5
 
 [environments.production]
 PYTHON_VERSION = "3.11"
+PORT = "8000"
 
