Update Railway configuration to use Dockerfile and modify startup command in main.py for improved compatibility. Adjust default port for Railway/Docker compatibility.

--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,8 @@
 [build]
-builder = "NIXPACKS"
+builder = "dockerfile"
 
 [deploy]
-startCommand = "python start_railway.py"
+startCommand = "python main.py"
 healthcheckPath = "/status"
 healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
